--- a/app/views/forecasts/location.html.erb
+++ b/app/views/forecasts/location.html.erb
@@ -1,3 +1,7 @@
-<h1><%=@street_address%></h1>
+<h1>Address to Weather</h1>
 
-<h2><%=@the_temperature%></h2>
+<p>The current temperature at <%=@street_address%> is <%=@the_temperature%></p>
+
+<p>The outlook for the next 60 minutes is: <%=@the_hour_outlook%></p>
+
+<p>The outlook for the next 24 hours is: <%=@the_day_outlook%></p>
