--- a/app/views/forecasts/location.html.erb
+++ b/app/views/forecasts/location.html.erb
@@ -1,3 +1,25 @@
-<h3>The current temperature at <%= @street_address %> is <%= @the_temperature%> degrees.</h3>
-<h3>The outlook for the next hour is: <%= @the_hour_outlook %></h3>
-<h3>The outlook for the next day is: <%= @the_day_outlook %> </h3>
+<!DOCTYPE html>
+<html>
+<head>
+  <title>Address to Weather</title>
+
+  <!-- Bootstrap -->
+  <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css">
+
+</head>
+
+<body>
+
+<div class="container">
+  <div class="jumbotron">
+    <h1>Hello, world!</h1>
+    <p>The current temperature at <%= @street_address %> is <%= @the_temperature%> degrees.</p>
+    <p>The outlook for the next hour is: <%= @the_hour_outlook %></p>
+    <p>The outlook for the next day is: <%= @the_day_outlook %></p>
+  </div>
+</div>
+
+</body>
+</html>
+
+
