--- a/app/views/forecasts/location.html.erb
+++ b/app/views/forecasts/location.html.erb
@@ -9,8 +9,8 @@ write some HTML around the instance variables in the view template -->
 
 <p>The current temperature at <%=  @clean_address %> is <%=@the_temperature%> degrees.</p>
 
-<p>The outlook for the next 60 minutes is: <%= @the_hour_outlook %>.</p>
+<p>The outlook for the next 60 minutes is: <%= @the_hour_outlook %></p>
 
-<p>The outlook for the next 24 hours is: <%= @the_day_outlook %>.</p>
+<p>The outlook for the next 24 hours is: <%= @the_day_outlook %></p>
 
-<p>The outlook for the rest of the week is: <%= @the_week_outlook %>.</p>
+<p>The outlook for the rest of the week is: <%= @the_week_outlook %></p>
